# coding_standards_test

./: .gitignore  .pre-commit-config.yaml  README.md  README_PACKAGE.md  enviroment.yml  pyproject.toml  requirements.txt
.github/workflows/: README.md  python-package.yml
src/software_src/: __init__.py  models.py  utilities.py
tests/: README_TEST.md  __init__.py  test_stuff.py
